<resources>
    <string name="app_nam">RegistroMovilVehicular</string>

    <string name="txt_usuario">Usuario</string>
    <string name="txt_password">Contraseña</string>

    <string name="txt_nuRegistro">N° de Hoja</string>
    <string name="txt_local">Local (Sapitos, El Porvenir, La Esperanza)</string>
    <string name="txt_ubicacion">Ubicación (Módulo A, Módulo B)</string>
    <string name="txt_unidad">Unidad Orgánica</string>
    <string name="txt_jefatura">Jefatura</string>
    <string name="txt_dependencia">Dependencia</string>
    <string name="txt_brevete"> Brevete</string>

    <string name="txt_codigoAnterior">Código anterior</string>
    <string name="txt_codigoIdentificacion">Código identificación</string>
    <string name="txt_descripción">Descripción</string>
    <string name="txt_marca">Marca</string>
    <string name="txt_modelo">Modelo</string>
    <string name="txt_placa">Placa</string>
    <string name="txt_color">Color</string>
    <string name="txt_estado">Estado</string>
    <string name="txt_tipo">Tipo</string>
    <string name="txt_anioFabricacion">Año fabricación</string>
    <string name="txt_serieMotor">Serie motor</string>
    <string name="txt_serieChasis">Serie chasis</string>
    <string name="txt_combustible">Combustible</string>
    <string name="txt_numAsientos">N° de Asientos</string>
    <string name="txt_numTarjetaPropiedad">N° de Tarjeta propiedad</string>
    <string name="txt_razonSocial">Razón Social</string>


    <string-array name="array_opciones_tablas">
        <item> </item>
        <item>B</item>
        <item>R</item>
        <item>M</item>
        <item>I</item>
    </string-array>

    <string-array name="array_parteExterna">
        <item>Carrocería</item>
        <item>Luces delanteras</item>
        <item>Luces de peligro</item>
        <item>Luces de freno</item>
        <item>Luces direccionales</item>
        <item>Luces de retroceso</item>
        <item>Lunas</item>
        <item>Parabrisas</item>
        <item>Brazos y plumillas</item>
        <item>Chapa de puerta</item>
        <item>Manija de puerta externa</item>
        <item>Espejos laterales</item>
        <item>Parachoques</item>
        <item>Llantas c/ aro</item>
        <item>Llanta y aro de respuesto</item>
        <item>Tapa de gasolina o diesel</item>
        <item>Máscara</item>
        <item>Puertas</item>
        <item>Antena Radio Base</item>
        <item>Antena Radio Musical</item>
        <item>Placa de Rodaje</item>
        <item>Seguro de aros</item>
        <item>Escarpines</item>
        <item>Logotipo de la Empresa</item>
    </string-array>


    <string-array name="array_parteInterna">
        <item>Tablero</item>
        <item>Kilometraje</item>
        <item>Chapa de contacto</item>
        <item>Llave de motor</item>
        <item>Radio musical</item>
        <item>Control remoto R.M.</item>
        <item>Radio Base</item>
        <item>Parlantes</item>
        <item>Calefacc/Vent.</item>
        <item>Pisos de jebe</item>
        <item>Cenicero Tablero</item>
        <item>Encendedor</item>
        <item>Manijas p/ luna</item>
        <item>Parasol</item>
        <item>Espejo retrovisor</item>
        <item>Cinturón de seguridad</item>
        <item>Sirena</item>
        <item>Cláxon</item>
        <item>Tarjeta de Propiedad</item>
        <item>Seguro de puerta</item>
        <item>Asiento ventilado</item>
        <item>Forro de asientos</item>
        <item>Tarjeta de Propiedad</item>
        <item>Porta documentos</item>
    </string-array>

    <string-array name="array_motor">
        <item>Batería</item>
        <item>Tapa de radiador</item>
        <item>Arrancador</item>
        <item>Alternador</item>
        <item>Tapa de agua</item>
        <item>Medidor de aceite</item>
        <item>Carburador - inyección</item>
        <item>Bujías</item>
        <item>Capote</item>
    </string-array>

    <string-array name="array_herramientas">
        <item>Gata (          ) TN.</item>
        <item>Palanca de Gata</item>
        <item>Llave de ruedas</item>
        <item>Alicate universal</item>
        <item>Llave de bujías</item>
        <item>Lámpara de inspección</item>
        <item>Llave de dado</item>
        <item>Destornillador plano</item>
        <item>Destornillador estrella</item>
        <item>Llave de boca o corono</item>
        <item>Triángulo de seguridad</item>
        <item>Cono de Seguridad vial</item>
        <item>Cable de batería</item>
    </string-array>

    <string-array name="array_materiales">
        <item>Extinguidor( )Kgs.</item>
        <item>Escoba pequeña</item>
        <item>Franela</item>
        <item>Botiquín</item>
    </string-array>

    <string name="txt_pie_cod_patronato">Cód. Pat. Radio Base</string>
    <string name="txt_pie_modelo">Modelo</string>
    <string name="txt_pie_radio_base">N/S Radio Base</string>
    <string name="txt_pie_soat">SOAT</string>
    <string name="txt_pie_vigencia">Vigencia</string>
    <string name="txt_pie_cia_seguros">CIA. Seguros</string>
    <string name="txt_pie_polizas">Poliza</string>
    <string name="txt_pie_rev_tecnica">Rev. Tecnica</string>
    <string name="txt_situacion">Situación</string>
    <string name="txt_pie_observacion">Observación</string>
    
    <string-array name="array_situacion">
        <item>Baja</item>
        <item>Tramite de Baja</item>
        <item>Custodia</item>
        <item>Cedido en uso</item>
    </string-array>
</resources>
