<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.edudev.proyectomovilvehiculos.ui.fragment.RegistroPieDetalleFragment">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_pie_cod_patronato"
            android:inputType="text"
            android:id="@+id/txt_pie_cod_patronato"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:hint="@string/txt_pie_modelo"
            android:id="@+id/txt_pie_modelo"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/txt_pie_radio_base"
            android:id="@+id/txt_pie_radio_base"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/txt_pie_soat"
            android:id="@+id/txt_pie_soat"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/txt_pie_vigencia"
            android:id="@+id/txt_pie_vigencia"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/txt_pie_cia_seguros"
            android:id="@+id/txt_pie_cia_seguros"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/txt_pie_polizas"
            android:id="@+id/txt_pie_polizas"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:hint="@string/txt_pie_rev_tecnica"
            android:id="@+id/txt_pie_rev_tecnica"/>
    </android.support.design.widget.TextInputLayout>
    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
        android:id="@+id/txt_situacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/txt_situacion"
        app:met_floatingLabel="normal" />
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/txt_pie_observacion"
            android:id="@+id/txt_pie_observacion"/>
    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:id="@+id/control_principal">
        <Button
            android:text="Atras"
            android:textStyle="bold"
            android:theme="@style/EstiloBoton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_atras"/>
        <Button
            android:text="Guardar"
            android:theme="@style/EstiloBoton_2"
            android:textStyle="bold"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_grabar"/>
    </LinearLayout>
</LinearLayout>
